--- a/QuizApp/QuestionViewController.xib
+++ b/QuizApp/QuestionViewController.xib
@@ -20,25 +20,41 @@
             <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cxB-Ph-Sew">
-                    <rect key="frame" x="175" y="165" width="42" height="21"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cxB-Ph-Sew">
+                    <rect key="frame" x="105" y="59" width="182" height="21"/>
+                    <constraints>
+                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="182" id="69e-sM-VDj"/>
+                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="V6V-FU-qFJ"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="QaI-QQ-yYM">
-                    <rect key="frame" x="137" y="362" width="240" height="128"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="QaI-QQ-yYM">
+                    <rect key="frame" x="0.0" y="88" width="393" height="764"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <constraints>
+                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="764" id="Gwx-dn-dEg"/>
+                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="393" id="xsb-aR-CcB"/>
+                    </constraints>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="iHj-ck-7IH"/>
+                        <outlet property="delegate" destination="-1" id="6jR-VK-qM1"/>
                     </connections>
                 </tableView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-            <point key="canvasLocation" x="140" y="20"/>
+            <constraints>
+                <constraint firstItem="QaI-QQ-yYM" firstAttribute="top" secondItem="cxB-Ph-Sew" secondAttribute="bottom" constant="8" symbolic="YES" id="1fl-H9-mRD"/>
+                <constraint firstItem="QaI-QQ-yYM" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="57j-yR-sHv"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="cxB-Ph-Sew" secondAttribute="trailing" constant="106" id="H9D-cY-DEl"/>
+                <constraint firstItem="QaI-QQ-yYM" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="SB4-aB-I3x"/>
+                <constraint firstAttribute="bottom" secondItem="QaI-QQ-yYM" secondAttribute="bottom" id="eYS-aL-bZF"/>
+                <constraint firstItem="cxB-Ph-Sew" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="105" id="igv-d0-olg"/>
+                <constraint firstItem="cxB-Ph-Sew" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="mTo-if-Kl9"/>
+            </constraints>
+            <point key="canvasLocation" x="139.69465648854961" y="19.718309859154932"/>
         </view>
     </objects>
     <resources>
