--- a/QuizApp/ResultViewController.xib
+++ b/QuizApp/ResultViewController.xib
@@ -31,6 +31,9 @@
                     <rect key="frame" x="76" y="362" width="240" height="128"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="tfH-a0-sDV"/>
+                    </connections>
                 </tableView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
