--- a/QuizApp/ResultViewController.xib
+++ b/QuizApp/ResultViewController.xib
@@ -20,17 +20,24 @@
             <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lPZ-6W-qHe">
-                    <rect key="frame" x="175" y="160" width="42" height="21"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="4td-9v-HAV">
-                    <rect key="frame" x="76" y="362" width="240" height="128"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="4td-9v-HAV">
+                    <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <constraints>
+                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="393" id="fLh-kZ-omB"/>
+                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="764" id="lup-8i-g2M"/>
+                    </constraints>
+                    <label key="tableHeaderView" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="lPZ-6W-qHe">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="21"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <constraints>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="haI-Tn-5VY"/>
+                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="185" id="vuN-ti-Sod"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="tfH-a0-sDV"/>
                     </connections>
@@ -38,7 +45,13 @@
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-            <point key="canvasLocation" x="-42" y="20"/>
+            <constraints>
+                <constraint firstAttribute="bottom" secondItem="4td-9v-HAV" secondAttribute="bottom" id="25q-u2-2Wc"/>
+                <constraint firstItem="4td-9v-HAV" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="4uM-AY-13q"/>
+                <constraint firstItem="4td-9v-HAV" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="BSj-VK-3k2"/>
+                <constraint firstItem="4td-9v-HAV" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="T86-IF-YKi"/>
+            </constraints>
+            <point key="canvasLocation" x="-43.511450381679388" y="19.718309859154932"/>
         </view>
     </objects>
     <resources>
